# MEDICAL_TRANSCRIPTION_RAG

./: .gitignore  README.md  audio_rag.py  main.py  pyproject.toml  requirements.txt
audio/: edited_transcript.txt  transcript_chunks.jsonl
faiss_transcript_store/: faiss.index  metadata.pkl
frontend/: package-lock.json
frontend/src/: App.jsx  index.css
src/: audio_rag_pipeline.py  search.py  vectorstore.py
stt_whisper/: inference.py
