[project]
name = "lang-rag-wh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.4.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.116.1",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "librosa>=0.11.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "typesense>=1.3.0",
    "uvicorn>=0.35.0",
]
